[metadata]
name = show-me
url = https://github.com/TomasTomecek/show-me
description = Show me my GitHub contributions!
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomas Tomecek
author_email = tomas@tomecek.net
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    github
    contributions
    open-source
    software


[options]
packages = find:
python_requires = >=3.6
include_package_data = True

setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

install_requires =
    click
    tabulate
    requests

[options.packages.find]
exclude =
    tests*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    show-me=show_me.cli:main
